Vid 44. Creating CRUD.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+test_annotations_category:
+    resource: "@TestAnnotationsBundle/Controller/CategoryController.php"
+    type:     annotation
+
 app:
   resource: '@AppBundle/Controller/'
   type: annotation
