--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,17 +4,31 @@ security:
 
   encoders:
     AppBundle\Entity\User: bcrypt
+    Symfony\Component\Security\Core\User\User:
+      algorithm: bcrypt
+      cost: 12
 
   # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
   providers:
     in_memory:
-      memory: ~
+      memory:
+        users:
+          ryan:
+            password: $2a$12$LCY0MefVIEc3TYPHV9SNnuzOfyr2p/AXIGoQJEDs4am4JwhNz/jli
+            roles: 'ROLE_USER'
+          admin:
+            password: $2a$12$cyTWeE9kpq1PjqKFiWUZFuCRPwVyAZwm4XzMZ1qPUFl7/flCM3V0G
+            roles: 'ROLE_ADMIN'
 
   firewalls:
     # disables authentication for assets and the profiler, adapt it according to your needs
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
+
+    admin:
+      pattern: ^/admin
+      http_basic: ~
 
     main:
       anonymous: ~
@@ -25,3 +39,7 @@ security:
 
       # https://symfony.com/doc/current/security/form_login_setup.html
       #form_login: ~
+
+  access_control:
+    # require ROLE_ADMIN for /admin*
+#    - { path: ^/admin, roles: ROLE_ADMIN }
