--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -10,15 +10,22 @@ security:
 
   # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
   providers:
+    chain_provider:
+      chain:
+        providers: [in_memory, mysql]
     in_memory:
       memory:
         users:
-          ryan:
+          ryan: #pass = 'ryanpass'
             password: $2a$12$LCY0MefVIEc3TYPHV9SNnuzOfyr2p/AXIGoQJEDs4am4JwhNz/jli
             roles: 'ROLE_USER'
-          admin:
+          admin: #pass = 'kitten'
             password: $2a$12$cyTWeE9kpq1PjqKFiWUZFuCRPwVyAZwm4XzMZ1qPUFl7/flCM3V0G
-            roles: 'ROLE_ADMIN'
+            roles: 'ROLE_ADMIN, ROLE_USER'
+    mysql:
+      entity:
+        class: AppBundle:User
+        property: username
 
   firewalls:
     # disables authentication for assets and the profiler, adapt it according to your needs
@@ -34,7 +41,7 @@ security:
     users:
       pattern: ^/users
       anonymous: ~
-      provider: in_memory
+      provider: chain_provider
       form_login:
         login_path: /users/login
         check_path: /users/login
